[package]
name = "unicycle"
version = "0.7.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/udoprog/unicycle"
homepage = "https://github.com/udoprog/unicycle"
documentation = "https://docs.rs/unicycle"
description = """
A scheduler for driving a large number of futures.
"""
keywords = ["async", "futures", "future"]
categories = ["asynchronous", "algorithms"]

[features]
default = ["futures-rs", "parking-lot"]
parking-lot = ["lock_api", "parking_lot"]
futures-rs = ["futures-core"]

[dependencies]
futures-core = { version = "0.3.5", optional = true }
parking_lot = { version = "0.10.2", optional = true }
lock_api = { version = "0.3.4", optional = true }
uniset = { version = "0.2.0", features = ["vec-safety"] }

[dev-dependencies]
tokio = { version = "0.2.20", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
checkers = "0.5.6"
rand = "0.7.3"
futures = "0.3.5"
pin-utils = "0.1.0"
hibitset = "0.6.3"
criterion = "0.3.2"
crossbeam = "0.7.3"

[[bench]]
name = "unordered"
harness = false
