[package]
name = "unicycle"
version = "0.9.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/udoprog/unicycle"
homepage = "https://github.com/udoprog/unicycle"
documentation = "https://docs.rs/unicycle"
description = """
A scheduler for driving a large number of futures.
"""
keywords = ["async", "futures", "future"]
categories = ["asynchronous", "algorithms"]

[features]
default = ["futures-rs", "parking-lot"]
parking-lot = ["lock_api", "parking_lot"]
futures-rs = ["futures-core"]

[dependencies]
futures-core = { version = "0.3.21", optional = true }
parking_lot = { version = "0.12.0", optional = true }
lock_api = { version = "0.4.6", optional = true }
uniset = { version = "0.2.0", features = ["vec-safety"] }
pin-project = "1.0.10"

[dev-dependencies]
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
tokio-stream = "0.1.8"
checkers = "0.6.0"
rand = "0.8.4"
futures = "0.3.21"
pin-utils = "0.1.0"
hibitset = "0.6.3"
criterion = "0.3.5"
crossbeam = "0.8.1"

[[bench]]
name = "unordered"
harness = false
