[package]
name = "unicycle"
version = "0.10.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.68"
description = "A scheduler for driving a large number of futures."
documentation = "https://docs.rs/unicycle"
readme = "README.md"
homepage = "https://github.com/udoprog/unicycle"
repository = "https://github.com/udoprog/unicycle"
license = "MIT OR Apache-2.0"
keywords = ["async", "future", "futures"]
categories = ["algorithms", "asynchronous"]

[features]
default = ["futures-rs", "parking-lot"]
parking-lot = ["lock_api", "parking_lot"]
futures-rs = ["futures-core"]

[dependencies]
futures-core = { version = "0.3.28", optional = true }
parking_lot = { version = "0.12.1", optional = true }
lock_api = { version = "0.4.9", optional = true }
uniset = { version = "0.2.3", features = ["vec-safety"] }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
tokio-stream = "0.1.12"
rand = "0.8.5"
futures = "0.3.28"
criterion = "0.4.0"
crossbeam = "0.8.2"

[[bench]]
name = "unordered"
harness = false
